[signal] openhab 5.0.0 and signal cli 0.13.18